Fix Head-block, CSS alignments, start grid-body

--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,50 @@ body {
     background-color:#d9d9d9;
 }
 
-button {
-    
-}
+/* button {
+
+} */
 
 #title-container {
     background-color:#ffffff;
     border: 1px #ffffff;
     border-radius: 25px;
+    width: 600px;
+    height: 75px;
+    align-self: center;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-#sketch-body {
+#title-block {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-bottom: 0px;
+}
+
+#button-block {
+    display: flex;
+    margin-top: 0px;
+    justify-content: center;
+    align-content: space-between;
+    
+}
+
+#sketchBody {
     background-color:#ffffff;
-    border: 1px #ffffff;
+    border: 10px #ffffff;
     border-radius: 25px;
+    margin-top: 32px;
+    width: 800px;
+    height: 800px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#cell {
+    border: 1px solid black;
+    background-color: #ffffff;
 }
